tests/negative/gold/abstract4_test.gold
tests/negative/abstract4_test.toit:8:7: error: Non-abstract class 'B' is missing implementations
class B extends A:
      ^
tests/negative/abstract4_test.toit:6:12: note: Missing implementation for 'foo'
  abstract foo
           ^~~
tests/negative/abstract4_test.toit:14:4: error: Can't instantiate abstract class
  (C).foo
   ^
Compilation failed.
